<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    tools:context=".Screen2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/Screen2textview"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/idEditTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/textboxHintTitle"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/idEditDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/textboxHintDescription"
                android:padding="8dp"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:minLines="1"
                android:maxLines="5"
                android:inputType="textMultiLine"
                />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/custom_button"
            android:padding="16dp"
            android:text="@string/buttonSubmit"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>